# Frenetix-Motion-Planner

./: .gitignore  INSTRUCTION.txt  main.py  plot.py  pyproject.toml
configurations/frenetix_motion_planner/: debug.yaml  planning.yaml
configurations/simulation/: behavior.yaml  prediction.yaml  visualization.yaml
cr_scenario_handler/planner_interfaces/: frenet_interface.py  planner_interface.py
cr_scenario_handler/simulation/: agent.py
cr_scenario_handler/utils/: evaluation.py  prediction_helpers.py  visualization.py
docker/: Dockerfile  docker-compose.yml
frenetix_motion_planner/: planner.py  reactive_planner_cpp.py  trajectory_board.py
frenetix_motion_planner/cost_functions/: partial_cost_functions.py
important_logs/: analyze.py  latency_folder_results.txt  latency_log_vehicle_20250904_113434.csv  latency_log_vehicle_20250904_122044.csv  latency_log_vehicle_20250904_122827.csv  latency_log_vehicle_20250904_123407.csv  plot.py
ros2_ws/src/my_package/: package.xml  setup.py
ros2_ws/src/my_package/my_package/: simple_node.py
ros2_ws/src/trajectory_msgs_custom/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_msgs_custom/msg/: BoardInputData.msg  BoardOutputData.msg  CartesianSample.msg  CurvilinearSample.msg
