<?xml version="1.0"?>
<package format="3">
  <name>trajectory_msgs_custom</name>
  <version>0.0.1</version>
  <description>Custom messages</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend> -->
</package>
